# koda-desk

./: .gitattributes  .gitignore  .gitmessage  AGENTS.md  README.md  index.html  package-lock.json  package.json  skills-lock.json  vite.config.ts
.agents/skills/agents-progressive-disclosure/: README.md  SKILL.md
.agents/skills/agents-progressive-disclosure/agents/: openai.yaml
docs/: README.md  git-conventions.md  input-interaction-plan.md  local-environment.md  mvp-validation.md  phase-2-plan.md  project-workflow.md  requirements.md  search-and-evidence.md
public/pets/: pets.json
public/pets/default/: README.md  pet.json
public/pets/koda/: pet.json
public/pets/lumen/: pet.json
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  input.rs  main.rs  pet_registry.rs  tray.rs  window.rs
src/renderer/: animation.ts  petCanvas.ts  petManifest.ts  petRegistry.ts  petState.ts
src/styles/: app.css
